# qemu-camp-2026-exper-eyauwag

hw/i2c/: Kconfig  i2c-gpio.c  meson.build
hw/nvram/: eeprom_at24c.c
hw/riscv/: Kconfig  g233.c
hw/ssi/: Kconfig  meson.build  spi-gpio.c
include/hw/riscv/: g233.h
rust/hw/: meson.build
rust/hw/gevico/: device.rs  meson.build  wrapper.h
rust/hw/gevico/src/: bindings.rs  lib.rs
rust/hw/i2c/src/: lib.rs
rust/hw/ssi/: meson.build
